--- a/smb/index.html
+++ b/smb/index.html
@@ -19,6 +19,76 @@
             EJS_startOnLoaded = true;
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "SMBSave.nes";
+            EJS_VirtualGamepadSettings = [
+    {
+        type: "button",
+        text: "Y",
+        id: "y",
+        location: "right",
+        left: 40,
+        bold: true,
+        input_value: 9
+    },
+    {
+        type: "button",
+        text: "X",
+        id: "X", 
+        location: "right",
+        top: 40,
+        bold: true,
+        input_value: 1
+    },
+    {
+        type: "button",
+        text: "B",
+        id: "b",
+        location: "right",
+        left: 81,
+        top: 40,
+        bold: true,
+        input_value: 8
+    },
+    {
+        type: "button",
+        text: "A",
+        id: "a",
+        location: "right",
+        left: 40,
+        top: 80,
+        bold: true,
+        input_value: 0
+    },
+    
+    //Note- the dpad and the zone will overlap in this example, this is just to show what it should look like.
+    {
+        type: "dpad",
+        location: "left",
+        left: "50%",
+        right: "50%",
+        joystickInput: false,
+        inputValues: [4, 5, 6, 7]
+    },
+    {
+        type: "button",
+        text: "Start",
+        id: "start",
+        location: "center",
+        left: 60,
+        fontSize: 15,
+        block: true,
+        input_value: 3
+    },
+    {
+        type: "button",
+        text: "Select",
+        id: "select",
+        location: "center",
+        left: -5,
+        fontSize: 15,
+        block: true,
+        input_value: 2
+    }
+];
         </script>
         <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
