Update SMB2 game URL to local reference

--- a/smb2/smb2.html
+++ b/smb2/smb2.html
@@ -18,7 +18,8 @@
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
-            EJS_gameUrl = "https://cdn.jsdelivr.net/gh/ohio-math/EmulatorJS-Games/smb2/smb2.nes";
+            //EJS_gameUrl = "https://cdn.jsdelivr.net/gh/ohio-math/EmulatorJS-Games/smb2/smb2.nes";
+            EJS_gameUrl = "smb2.nes";
             EJS_VirtualGamepadSettings = [
     {
         type: "button",
